--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "react-native-root-view-background",
-  "version": "1.0.2",
-  "description": "",
+  "name": "@kingstinct/react-native-root-view-background",
+  "version": "1.0.3",
+  "description": "Setting rootView background colors",
   "main": "index.js",
+  "homepage": "https://github.com/robertherber/react-native-root-view-background",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jan Romaniak",
   "license": "MIT",
   "peerDependencies": {
-    "react-native": "^0.52.2"
+    "react-native": "*"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/johniak/react-native-root-view-background.git"
+    "url": "https://github.com/robertherber/react-native-root-view-background.git"
   },
   "keywords": [
     "android",
@@ -22,6 +23,5 @@
     "react",
     "react-component",
     "root view"
-  ],
-  "homepage": "https://github.com/johniak/react-native-root-view-background"
+  ]
 }
